// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateValueInMetadataTrack action Dispatches error when theres an error updating in api v2 1`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "error": "We couldn't save your data.",
  },
]
`;

exports[`updateValueInMetadataTrack action Works correctly in api v2 1`] = `
Array [
  Object {
    "message": "Saving sample...",
  },
  Object {
    "key": "Track_1",
    "sampleUuid": "mockSampleId",
    "value": "mockNewValue",
  },
]
`;
